Aluminium migration
Bump projet's dependencies to Aluminium
- odlparent => 7.0.5
- mdsal => 6.0.4
- netconf => 1.9.0-SNAPSHOT
- restconf => 1.12.0-SNAPSHOT
- controller => 2.0.3

transportpce-common migration first step

Signed-off-by: Gilles Thouenon <gilles.thouenon@orange.com>
Change-Id: Ibe488f1822f39ece3c054c4dab9ceac253a2b555